--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -293,7 +293,7 @@ main{
   flex-direction: column;
   flex-wrap: wrap;
   /* box-sizing: border-box; */
-  position: relative;
+  /* position: relative; */
   overflow: hidden;
   border: 2px solid var(--color-white);
   border-top: none;
@@ -324,7 +324,7 @@ main{
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 1rem;
   margin: 2rem;
 }
 
@@ -346,7 +346,7 @@ main{
 }
 
 .skill-card:hover{
-  transform: scale(1.09);
+  transform: scale(1.05);
 }
 
 .skill-card h2{
@@ -372,4 +372,42 @@ main{
 
 .resorses a{
   color: var(--color-light-gray);
+}
+
+.experiance{
+
+  border: 2px solid var(--color-white);
+  border-top: none;
+  border-bottom: none;
+  padding-top: 1rem;
+
+}
+
+
+
+.experiance-container {
+  color: #fff;
+  display:flex;
+  flex-direction:row;
+  flex-wrap:wrap;
+  align-items:center;
+  justify-content:center;
+  gap:1.5rem;
+  margin: 3rem 0;
+}
+.experiance-card{
+  width: 30rem;
+  display:flex;
+  flex-direction:column;
+  gap: 1.5rem;
+  border: 1px dashed var(--color-gray);
+  padding:1rem;
+  border-radius: 15px;
+}
+.work-info{
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content: center;
+  column-gap: 1rem;
 }
